@@ -1,6 +1,17 @@
 2006-12-10  Benoît Dejean  <benoit@placenet.org>
 
 	* src/Makefile.am:
+	* src/callbacks.c:
+	* src/callbacks.cpp:
+	* src/callbacks.h:
+	* src/util.c:
+	* src/util.cpp:
+
+	More C++.
+
+2006-12-10  Benoît Dejean  <benoit@placenet.org>
+
+	* src/Makefile.am:
 	* src/selinux.c:
 	* src/selinux.cpp:
 	* src/selinux.h:
